add all images to assets

--- a/grid-index.html
+++ b/grid-index.html
@@ -19,7 +19,7 @@
             <div class="personal-info-block">
                 <div class="personal-info-item"">
                     <span>
-                        <img src=" ./briefcase.png" alt="" srcset="">
+                        <img src=" /assets/briefcase.png" alt="" srcset="">
                     </span>
                     <span class="text-color-grey">
                         Occupation
@@ -31,7 +31,7 @@
 
                 <div class="personal-info-item">
                     <span>
-                        <img src="./location.png" alt="" srcset="">
+                        <img src="/assets/location.png" alt="" srcset="">
                     </span>
                     <span class="text-color-grey">
                         Location
@@ -44,7 +44,7 @@
 
                 <div class="personal-info-item">
                     <span>
-                        <img src="./person.png" alt="" srcset="">
+                        <img src="/assets/person.png" alt="" srcset="">
                     </span>
                     <span class="text-color-grey">
                         Age
@@ -56,7 +56,7 @@
 
                 <div class="personal-info-item">
                     <span>
-                        <img src="./home.png" alt="" srcset="">
+                        <img src="/assets/home.png" alt="" srcset="">
                     </span>
                     <span class="text-color-grey">
                         Family
@@ -73,15 +73,15 @@
             <div class="indicator-block">
                 <div class="indicator-item">
                     <div>Javascript</div>
-                    <img src="./bar1.png" alt="">
+                    <img src="/assets/bar1.png" alt="">
                 </div>
                 <div class="indicator-item pd-top-17px">
                     <div>CSS, SCSS</div>
-                    <img src="./bar2.png" alt="">
+                    <img src="/assets/bar2.png" alt="">
                 </div>
                 <div class="indicator-item pd-top-17px">
                     <div>Vue.js</div>
-                    <img src="./bar1.png" alt="">
+                    <img src="/assets/bar1.png" alt="">
                 </div>
             </div>
         </article>
@@ -124,7 +124,7 @@
 
 
         <figure class="image-wrapper">
-            <img src="/avatar.png" alt="" width="500px" height="750px" />
+            <img src="/assets/avatar.png" alt="" width="500px" height="750px" />
             <div class="image-block-text">"It is very important for me to have fresh, tasty products at hand."</div>
         </figure>
 
