--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
         grid-template-areas:
             "header first-article figure"
             "icons second-article figure"
-            "indicator third-article figure"
-        ;
+            "indicator third-article figure";
         background-color: black;
     }
 
