--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="personal-info-block">
                 <div class="personal-info-item"">
                     <span>
-                        <img src=" /assets/briefcase.png" alt="" srcset="">
+                        <img src=" /assets/briefcase.PNG" alt="" srcset="">
                     </span>
                     <span class="text-color-grey">
                         Occupation
@@ -31,7 +31,7 @@
 
                 <div class="personal-info-item">
                     <span>
-                        <img src="assets/location.png" alt="" srcset="">
+                        <img src="assets/location.PNG" alt="" srcset="">
                     </span>
                     <span class="text-color-grey">
                         Location
@@ -44,7 +44,7 @@
 
                 <div class="personal-info-item">
                     <span>
-                        <img src="assets/person.png" alt="" srcset="">
+                        <img src="assets/person.PNG" alt="" srcset="">
                     </span>
                     <span class="text-color-grey">
                         Age
@@ -56,7 +56,7 @@
 
                 <div class="personal-info-item">
                     <span>
-                        <img src="assets/home.png" alt="" srcset="">
+                        <img src="assets/home.PNG" alt="" srcset="">
                     </span>
                     <span class="text-color-grey">
                         Family
@@ -73,15 +73,15 @@
             <div class="indicator-block">
                 <div class="indicator-item">
                     <div>Javascript</div>
-                    <img src="assets/bar1.png" alt="">
+                    <img src="assets/bar1.PNG" alt="">
                 </div>
                 <div class="indicator-item pd-top-17px">
                     <div>CSS, SCSS</div>
-                    <img src="assets/bar2.png" alt="">
+                    <img src="assets/bar2.PNG" alt="">
                 </div>
                 <div class="indicator-item pd-top-17px">
                     <div>Vue.js</div>
-                    <img src="assets/bar1.png" alt="">
+                    <img src="assets/bar1.PNG" alt="">
                 </div>
             </div>
         </article>
@@ -124,7 +124,7 @@
 
 
         <figure class="image-wrapper">
-            <img src="assets/avatar.png" alt="" width="500px" height="750px" />
+            <img src="assets/avatar.PNG" alt="" width="500px" height="750px" />
             <div class="image-block-text">"It is very important for me to have fresh, tasty products at hand."</div>
         </figure>
 
