--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="personal-info-block">
                 <div class="personal-info-item"">
                     <span>
-                        <img src=" /assets/briefcase.PNG" alt="" srcset="">
+                        <img src=" assets/briefcase.PNG" alt="" srcset="">
                     </span>
                     <span class="text-color-grey">
                         Occupation
