--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h1>Biography</h1>
             <aside class="fs-15px">
                 Zhanibek and his wife Malika. They can focus more on their
-                carriers but their main worry is about their future kids education and health. With a busy week days,
+                careers but their main worry is about their future kids education and health. With busy week days,
                 the
                 time they can really get together as a family is during the dinners time and weekends. So their
                 meal
