--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 
         <figure class="image-wrapper">
-            <div style="position: relative; width: 500px; height: 750px; background: url(./assets/avatar.PNG);">
+            <div style="position: relative; width: 500px; height: 750px; background: url(assets/avatar.PNG);">
                 <div class="image-block-text">"It is very important for me to have fresh, tasty products at hand."</div>
             </div>
             <!-- <img src="assets/avatar.png" alt="" width="500px" height="750px" /> -->
