--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
 
 
         <figure class="image-wrapper">
-            <div style="position: relative; width: 500px; height: 750px; background: url(assets/avatar.PNG);">
+            <div class="image-block">
                 <div class="image-block-text">"It is very important for me to have fresh, tasty products at hand."</div>
             </div>
-            <!-- <img src="assets/avatar.png" alt="" width="500px" height="750px" /> -->
         </figure>
 
 
@@ -145,6 +144,13 @@
             "icons second-article figure"
             "indicator third-article figure";
         background-color: black;
+    }
+
+    .image-block {
+        position: relative;
+        width: 500px;
+        height: 750px;
+        background: url(./assets/avatar.PNG);
     }
 
     body {
