--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         position: relative;
         width: 500px;
         height: 750px;
-        background: url(./assets/avatar.PNG);
+        background: url(assets/avatar.PNG);
     }
 
     body {
