--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         position: relative;
         width: 500px;
         height: 750px;
-        background: url(assets/avatar.PNG);
+        background-image: url("https://zsgdev.github.io/profile-task/avatar.PNG");
     }
 
     body {
@@ -165,7 +165,6 @@
 
     .personal-info-wrapper {
         grid-area: icons;
-        background-color: 'blue';
         border: 1px solid black;
     }
 
