--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         position: relative;
         width: 500px;
         height: 750px;
-        background-image: url("https://zsgdev.github.io/profile-task/assets/avatar.PNG");
+        background-image: url("../assets/avatar.PNG");
     }
 
     body {
