--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         position: relative;
         width: 500px;
         height: 750px;
-        background-image: url("././avatar.PNG");
+        background-image: url("assets/avatar.png");
     }
 
     body {
