--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 
         <figure class="image-wrapper">
             <div class="image-block">
+                <img src="assets/avatar.png" alt="" width="500" height="750">
                 <div class="image-block-text">"It is very important for me to have fresh, tasty products at hand."</div>
             </div>
         </figure>
@@ -150,7 +151,6 @@
         position: relative;
         width: 500px;
         height: 750px;
-        background-image: url("../assets/avatar.png");
     }
 
     body {
