--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <article class="points-wrapper">
             <h1>Pain points</h1>
             <aside class="fs-15px">
-                Zhanibek need to find flexible solution that can help him to optimize his time while dedicating hisself
+                Zhanibek need to find flexible solution that can help him to optimize his time while dedicating himself
                 to
                 his carrier, making sure to maintain a health lifestyle.
             </aside>
