--- a/index.html
+++ b/index.html
@@ -297,9 +297,19 @@
         .personal-info-block {
             padding: 30px 10px;
             justify-content: space-between;
+            height: 400px;
+        }
+
+        .image-block {
+            margin: auto;
+        }
+
+        .fs-15px {
+            font-size: 30px;
         }
 
         .grid-container {
+            font-size: 30px;
             grid-template-columns: 1fr;
             grid-template-rows: 1fr;
             grid-template-areas:
