--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
             <div class="indicator-block">
                 <div class="indicator-item">
                     <div>Javascript</div>
-                    <img src="assets/bar1.png" alt="">
+                    <img class="image-mobile-resolution" src="assets/bar1.png" alt="">
                 </div>
                 <div class="indicator-item pd-top-17px">
                     <div>CSS, SCSS</div>
-                    <img src="assets/bar2.png" alt="">
+                    <img class="image-mobile-resolution" src="assets/bar2.png" alt="">
                 </div>
                 <div class="indicator-item pd-top-17px">
                     <div>Vue.js</div>
-                    <img src="assets/bar1.png" alt="">
+                    <img class="image-mobile-resolution" src="assets/bar1.png" alt="">
                 </div>
             </div>
         </article>
@@ -292,6 +292,14 @@
 
         article {
             padding: 50px 50px;
+        }
+
+        .pd-top-17px {
+            padding-top: 50px;
+        }
+
+        .image-mobile-resolution {
+            width: 550px;
         }
 
         .personal-info-block {
