--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <article class="personal-info-wrapper">
             <div class="personal-info-block">
-                <div class="personal-info-item"">
+                <div class="personal-info-item">
                     <span>
                         <img src=" assets/briefcase.png" alt="" srcset="">
                     </span>
@@ -284,7 +284,6 @@
         }
     }
 
-
     @media (max-width: 1199.98px) {
         header {
             text-align: center;
@@ -305,7 +304,8 @@
         .personal-info-block {
             padding: 30px 10px;
             justify-content: space-between;
-            height: 400px;
+            height: 320px;
+            margin-top: 100px;
         }
 
         .image-block {
