--- a/index.html
+++ b/index.html
@@ -304,8 +304,11 @@
         .personal-info-block {
             padding: 30px 10px;
             justify-content: space-between;
-            height: 320px;
             margin-top: 100px;
+        }
+
+        .personal-info-item {
+            height: 100px;
         }
 
         .image-block {
@@ -313,7 +316,7 @@
         }
 
         .fs-15px {
-            font-size: 30px;
+            font-size: 40px;
         }
 
         .grid-container {
