--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     @media (max-width: 1199.98px) {
         header {
-            text-align: center;
+            padding-left: 50px;
         }
 
         article {
@@ -303,8 +303,9 @@
 
         .personal-info-block {
             padding: 30px 10px;
+            display: flex;
+            gap: 40px;
             justify-content: space-between;
-            margin-top: 100px;
         }
 
         .personal-info-item {
