--- a/index.html
+++ b/index.html
@@ -369,6 +369,24 @@
     }
 
     @media (max-width: 1199.98px) {
+        .progress-bar {
+            width: 600px;
+            height: 10px;
+        }
+
+        .progress-bar div {
+            height: 10px;
+            border-radius: 5px;
+            width: 0%;
+            background-color: #fff;
+        }
+
+        .progress-bar div span {
+            height: 40px;
+            width: 40px;
+            font-size: 14px;
+        }
+
         header {
             padding-left: 50px;
         }
