--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -17,52 +18,53 @@
         <article class="personal-info-wrapper">
             <div class="personal-info-block">
                 <div class="personal-info-item">
-                    <span>
+                    <div>
                         <img src=" assets/briefcase.png" alt="" srcset="">
-                    </span>
-                    <span class="text-color-grey">
+                    </div>
+                    <div class="personal-info-item-title text-color-grey">
                         Occupation
-                    </span>
-                    <span>
+                    </div>
+                    <div class="personal-info-item-title">
                         Front-end Developer
-                    </span>
+                    </div>
                 </div>
 
                 <div class="personal-info-item">
-                    <span>
+                    <div>
                         <img src="assets/location.png" alt="" srcset="">
-                    </span>
-                    <span class="text-color-grey">
+                    </div>
+                    <div class="personal-info-item-title text-color-grey">
                         Location
-                    </span>
-                    <span>
+                    </div>
+                    <div class="personal-info-item-title">
                         Astana, Kazakhstan
-                    </span>
+                    </div>
                 </div>
+            </div>
 
-
+            <div class="personal-info-block">
                 <div class="personal-info-item">
-                    <span>
+                    <div>
                         <img src="assets/person.png" alt="" srcset="">
-                    </span>
-                    <span class="text-color-grey">
+                    </div>
+                    <div class="personal-info-item-title text-color-grey">
                         Age
-                    </span>
-                    <span>
+                    </div>
+                    <div class="personal-info-item-title">
                         27
-                    </span>
+                    </div>
                 </div>
 
                 <div class="personal-info-item">
-                    <span>
+                    <div>
                         <img src="assets/home.png" alt="" srcset="">
-                    </span>
-                    <span class="text-color-grey">
+                    </div>
+                    <div class="personal-info-item-title text-color-grey">
                         Family
-                    </span>
-                    <span>
+                    </div>
+                    <div class="personal-info-item-title">
                         Married
-                    </span>
+                    </div>
                 </div>
             </div>
 
@@ -140,303 +142,3 @@
 </body>
 
 </html>
-<style>
-    .grid-container {
-        display: grid;
-        margin-left: auto;
-        margin-right: auto;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-        width: 1650px;
-        grid-template-areas:
-            "header first-article figure"
-            "icons second-article figure"
-            "indicator third-article figure";
-        background-color: black;
-    }
-
-    .image-block {
-        position: relative;
-        width: 500px;
-        height: 750px;
-    }
-
-    body {
-        font-family: 'Inter';
-        color: white;
-        background-color: black;
-    }
-
-    header {
-        font-size: 75px;
-        animation: moveInLeft 1s ease-out;
-    }
-
-    .progress-bar {
-        background: #4c4c4c;
-        width: 100%;
-        height: 5px;
-        border-radius: 5px;
-    }
-
-    .progress-bar div {
-        height: 5px;
-        border-radius: 5px;
-        width: 0%;
-        background-color: #fff;
-    }
-
-    .progress-bar div span {
-        height: 30px;
-        width: 30px;
-        font-size: 10px;
-        border-radius: 50%;
-        background: #222;
-        float: right;
-        margin-top: -15px;
-        margin-right: -30px;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .javascript {
-        animation: javascript 1s linear forwards;
-    }
-
-    .css {
-        animation: css 1s linear forwards;
-    }
-
-    .vue {
-        animation: vue 1s linear forwards;
-    }
-
-    @keyframes javascript {
-        100% {
-            width: 75%;
-        }
-    }
-
-    @keyframes css {
-        100% {
-            width: 65%;
-        }
-    }
-
-    @keyframes vue {
-        100% {
-            width: 80%;
-        }
-    }
-
-    .personal-info-wrapper {
-        grid-area: icons;
-        border: 1px solid black;
-        animation: moveInLeft 1s ease-out;
-    }
-
-    .personal-info-block {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        height: 100%;
-        flex-flow: row wrap;
-    }
-
-    .personal-info-item {
-        width: 205px;
-        height: 135px;
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-        padding-inline: 10px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-    .indicator-wrapper {
-        grid-area: indicator;
-        animation: moveInLeft 1s ease-out;
-    }
-
-    .indicator-block {
-        width: 100%;
-        height: 100%;
-    }
-
-    .indicator-item {
-        width: 460px;
-        height: 33px;
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-    }
-
-    .biography-wrapper {
-        grid-area: first-article;
-        background-color: 'blue';
-        animation: moveInBottom 1s ease-out;
-    }
-
-    .needs-wrapper {
-        grid-area: second-article;
-        animation: moveInBottom 1s ease-out;
-    }
-
-    .needs-block-list {
-        padding-left: 18px;
-    }
-
-    .points-wrapper {
-        grid-area: third-article;
-        animation: moveInBottom 1s ease-out;
-    }
-
-    .fs-15px {
-        font-size: 15px;
-    }
-
-    .pd-top-17px {
-        padding-top: 17px;
-    }
-
-    .text-color-grey {
-        color: grey;
-    }
-
-    .image-wrapper {
-        position: relative;
-        color: black;
-        grid-area: figure;
-        animation: moveInBottom 1s ease-out;
-    }
-
-    .image-block-text {
-        position: absolute;
-        width: 360px;
-        height: 105px;
-        top: 75%;
-        right: 15%;
-        font-size: 30px;
-        line-height: 35px;
-        text-align: center;
-        font-weight: bold;
-        text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
-            1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
-    }
-
-    progress::-moz-progress-bar {
-        background: #4c4c4c;
-    }
-
-    progress::-webkit-progress-value {
-        background: #4c4c4c;
-    }
-
-    progress {
-        background: #4c4c4c;
-        color: aqua
-    }
-
-    @keyframes moveInLeft {
-        0% {
-            opacity: 0;
-            transform: translateX(-100px);
-        }
-
-        80% {
-            transform: translateX(10px);
-        }
-
-        100% {
-            opacity: 1;
-            transform: translate(0);
-        }
-    }
-
-    @keyframes moveInBottom {
-        0% {
-            opacity: 0;
-            transform: translateY(30px);
-        }
-
-        100% {
-            opacity: 1;
-            transform: translate(0);
-        }
-    }
-
-    @media (max-width: 1199.98px) {
-        .progress-bar {
-            width: 600px;
-            height: 10px;
-        }
-
-        .progress-bar div {
-            height: 10px;
-            border-radius: 5px;
-            width: 0%;
-            background-color: #fff;
-        }
-
-        .progress-bar div span {
-            height: 40px;
-            width: 40px;
-            font-size: 14px;
-        }
-
-        header {
-            padding-left: 50px;
-        }
-
-        article {
-            padding: 50px 50px;
-        }
-
-        .pd-top-17px {
-            padding-top: 50px;
-        }
-
-        .image-mobile-resolution {
-            width: 550px;
-        }
-
-        .personal-info-block {
-            padding: 30px 10px;
-            display: flex;
-            gap: 0px;
-            justify-content: space-between;
-        }
-
-        .personal-info-item {
-            height: 180px;
-        }
-
-        .image-block {
-            margin: auto;
-        }
-
-        .fs-15px {
-            font-size: 40px;
-        }
-
-        .grid-container {
-            width: 100%;
-            font-size: 30px;
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr;
-            grid-template-areas:
-                "header"
-                "icons"
-                "indicator"
-                "first-article"
-                "second-article"
-                "third-article"
-                "figure"
-            ;
-            background-color: black;
-        }
-    }
-</style>
