--- a/index.html
+++ b/index.html
@@ -9,135 +9,83 @@
 </head>
 
 <body>
-    <!-- <section> -->
     <div class="grid-container">
-        <header>
-            Zhanibek Sundetov
-        </header>
-
-        <article class="personal-info-wrapper">
-            <div class="personal-info-block">
-                <div class="personal-info-item">
-                    <div>
-                        <img src=" assets/briefcase.png" alt="" srcset="">
-                    </div>
-                    <div class="personal-info-item-title text-color-grey">
-                        Occupation
-                    </div>
-                    <div class="personal-info-item-title">
-                        Front-end Developer
-                    </div>
-                </div>
-
-                <div class="personal-info-item">
-                    <div>
-                        <img src="assets/location.png" alt="" srcset="">
-                    </div>
-                    <div class="personal-info-item-title text-color-grey">
-                        Location
-                    </div>
-                    <div class="personal-info-item-title">
-                        Astana, Kazakhstan
-                    </div>
-                </div>
-            </div>
-
-            <div class="personal-info-block">
-                <div class="personal-info-item">
-                    <div>
-                        <img src="assets/person.png" alt="" srcset="">
-                    </div>
-                    <div class="personal-info-item-title text-color-grey">
-                        Age
-                    </div>
-                    <div class="personal-info-item-title">
-                        27
-                    </div>
-                </div>
-
-                <div class="personal-info-item">
-                    <div>
-                        <img src="assets/home.png" alt="" srcset="">
-                    </div>
-                    <div class="personal-info-item-title text-color-grey">
-                        Family
-                    </div>
-                    <div class="personal-info-item-title">
-                        Married
-                    </div>
-                </div>
-            </div>
-
-        </article>
-        <article class="indicator-wrapper">
-            <h1>Tech</h1>
-            <div class="indicator-block">
-                <div class="indicator-item">
-                    <div>Javascript</div>
-                    <div class="progress-bar">
-                        <div class="javascript"><span>75%</span></div>
-                    </div>
-                </div>
-                <div class="indicator-item pd-top-17px">
-                    <div>CSS, SCSS</div>
-                    <div class="progress-bar">
-                        <div class="css"><span>65%</span></div>
-                    </div>
-                </div>
-                <div class="indicator-item pd-top-17px">
-                    <div>Vue.js</div>
-                    <div class="progress-bar">
-                        <div class="vue"><span>80%</span></div>
-                    </div>
-                </div>
-            </div>
-        </article>
-
-        <article class="biography-wrapper">
-            <h1>Biography</h1>
-            <aside class="fs-15px">
-                Zhanibek and his wife Malika. They can focus more on their
-                careers but their main worry is about their future kids education and health. With busy week days,
-                the
-                time they can really get together as a family is during the dinners time and weekends. So their
-                meal
-                is a really special part of their days. He loves to use avocados in his diet. Interested in
-                programming.
-            </aside>
-        </article>
-
-        <article class=" needs-wrapper">
-            <h1>Needs</h1>
-            <aside class="fs-15px">
-                <ul class="needs-block-list">
-                    <li>Be ready for holiday family gathering as well as for light dinner during the day.</li>
-                    <li>Find balance between feeling good about himself, being able to maintain his lifestyle, while
-                        contributing with the world.</li>
-                    <li>Wise choices of the brands and respect to environment and sustainability is fundamental for
-                        him.
-                    </li>
-                </ul>
-            </aside>
-        </article>
-
-        <article class="points-wrapper">
-            <h1>Pain points</h1>
-            <aside class="fs-15px">
-                Zhanibek need to find flexible solution that can help him to optimize his time while dedicating himself
-                to
-                his carrier, making sure to maintain a health lifestyle.
-            </aside>
-        </article>
-
+        <header class="fancy-header">Zhanibek Sundetov</header>
 
         <figure class="image-wrapper">
             <div class="image-block">
-                <img src="assets/avatar.png" alt="" width="500" height="750">
-                <div class="image-block-text">"It is very important for me to have fresh, tasty products at hand."</div>
+                <img src="assets/avatar.png" alt="Avatar">
+                <div class="quote">“Code smart. Live well.”</div>
             </div>
         </figure>
 
+        <section class="panel bio">
+            <h2>👋 About Me</h2>
+            <p>
+                I’m a 30-year-old full-stack developer from Astana, Kazakhstan.
+                I build clean, performant web applications with passion and purpose. Outside of work, I'm all about good food, strong coffee, and keeping life in balance.
+            </p>
+        </section>
 
+        <section class="panel tech">
+            <h2>🛠 Tech Stack</h2>
+            <div class="progress-list">
+                <div class="progress-item">
+                    <span>JavaScript</span>
+                    <div class="bar" style="--progress: 90%"></div>
+                </div>
+                <div class="progress-item">
+                    <span>CSS / SCSS</span>
+                    <div class="bar" style="--progress: 80%"></div>
+                </div>
+                <div class="progress-item">
+                    <span>PHP / Laravel</span>
+                    <div class="bar" style="--progress: 85%"></div>
+                </div>
+                <div class="progress-item">
+                    <span>Vue / React</span>
+                    <div class="bar" style="--progress: 75%"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="panel info">
+            <h2>📇 Quick Facts</h2>
+            <div class="info-grid">
+                <div class="info-card">
+                    <img src="assets/briefcase.png" alt="">
+                    <span>Full-stack Developer</span>
+                </div>
+                <div class="info-card">
+                    <img src="assets/location.png" alt="">
+                    <span>Astana, KZ</span>
+                </div>
+                <div class="info-card">
+                    <img src="assets/person.png" alt="">
+                    <span>30 y.o.</span>
+                </div>
+                <div class="info-card">
+                    <img src="assets/home.png" alt="">
+                    <span>Independent</span>
+                </div>
+            </div>
+        </section>
+
+        <section class="panel needs">
+            <h2>🚀 Goals</h2>
+            <ul>
+                <li>Build scalable, user-friendly products.</li>
+                <li>Keep a healthy and intentional lifestyle.</li>
+                <li>Work with tech that creates real impact.</li>
+            </ul>
+        </section>
+
+        <section class="panel pains">
+            <h2>⚠️ Challenges</h2>
+            <p>
+                Staying focused while juggling multiple roles, and finding time for health and creativity in the fast-paced dev world.
+            </p>
+        </section>
     </div>
 </body>
 
